# rust-syntax

./: .gitignore  Cargo.toml  README.md
crate-demo/src/: lib.rs  test.rs
crate-demo/src/test_mod/: mod.rs  sub.rs
public-function/: Cargo.toml
public-function/src/: lib.rs  prime.rs
public-struct/: Cargo.toml
public-struct/src/: error.rs  lib.rs  show.rs
rust-syntax-nightly/: Cargo.toml
rust-syntax-nightly/src/: lib.rs  main.rs  test_benchmark.rs  test_closure.rs  test_generic.rs  test_unsize.rs  test_unstable_library.rs
rust-syntax-stable/: Cargo.toml  build.rs
rust-syntax-stable/lib/: spsolver.lib
rust-syntax-stable/src/: lib.rs  main.rs  main_mod.rs  test_alias.rs  test_arc.rs  test_asm.rs  test_borrow.rs  test_calling_convention.rs  test_capture.rs  test_cpuid.rs  test_drop.rs  test_enum.rs  test_equal.rs  test_format.rs  test_from.rs  test_func_name.rs  test_into.rs  test_iterator.rs  test_lifetime.rs  test_loop.rs  test_macro.rs  test_match.rs  test_move.rs  test_multi_thread.rs  test_never.rs  test_num.rs  test_option.rs  test_orphan_rule.rs  test_path.rs  test_raw_pointer.rs  test_rdrand.rs  test_ref.rs  test_result.rs  test_smart_pointer.rs  test_static.rs  test_str.rs  test_trait.rs  test_trait_object.rs  test_tuple_struct.rs  test_type.rs  (+3 more)
rust-syntax-stable/src/test_orphan_rule/: impl_struct.rs  impl_trait.rs  mod.rs  struct.rs  trait.rs
src/: lib.rs  test_borrow.rs  test_index.rs  test_str.rs  test_trait_object.rs
